ucs-test-ucsschool (3.0.17-63) unstable; urgency=low

  * Bug #44993: fix logging (merged from 4.2)

 -- Daniel Troeder <troeder@univention.de>  Fri, 08 Sep 2017 09:12:12 +0200

ucs-test-ucsschool (3.0.17-62) unstable; urgency=low
  * Bug #44588: add support for multiple schools to test User
  * check removal of single, primary and secondary schools from User
  * adapt to schoolwizards/users/remove API change

 -- Daniel Troeder <troeder@univention.de>  Thu, 18 May 2017 15:26:30 +0200

ucs-test-ucsschool (3.0.17-61) unstable; urgency=low

  * Bug #44248/#40527: fixed typo in 04_ucs-school-reset-password-check and add
    reset checks for admins

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sun, 09 Apr 2017 22:29:57 +0200

ucs-test-ucsschool (3.0.17-60) unstable; urgency=low

  * Bug #43389: fix dependency

 -- Florian Best <best@univention.de>  Mon, 13 Mar 2017 13:25:50 +0100

ucs-test-ucsschool (3.0.17-59) unstable; urgency=low

  * Bug #41910: modify 207_import-users_school_change to check group
    membership when adding and removing schools to/from a user
  * adapt 132_remove-old-homedirs to API change of User.remove_from_school()

 -- Daniel Troeder <troeder@univention.de>  Wed, 15 Feb 2017 11:32:39 +0100

ucs-test-ucsschool (3.0.17-58) unstable; urgency=low

  * Bug #34206: reenabled test 17_http_proxy_auth_after_passwd_reset_check

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 14 Feb 2017 13:37:42 +0100

ucs-test-ucsschool (3.0.17-57) unstable; urgency=low

  * Bug #41910: make 'legacy' an attribute
  * add colored log output

 -- Daniel Troeder <troeder@univention.de>  Tue, 14 Feb 2017 11:04:25 +0100

ucs-test-ucsschool (3.0.17-56) unstable; urgency=low

  * Bug #41910: adapt derived classes to API change

 -- Daniel Troeder <troeder@univention.de>  Tue, 14 Feb 2017 09:43:44 +0100

ucs-test-ucsschool (3.0.17-55) unstable; urgency=low

  * Bug #41910: support legacy import script (not setting schools attribute)
